[project]
name = "tinymce-typer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "cryptography==44.0.2",
    "idna==3.10",
    "packaging==25.0",
    "pycparser==2.22",
    "pyperclip==1.9.0",
    "selenium==4.31.0",
    "urllib3==2.4.0",
    "webdriver-manager==4.0.2",
]
